<resources>
    <string name="app_name">Sophos Mobile Project</string>
    <string name="ingreso">Ingresa tus datos para acceder</string>
    <string name="logo">Logo Sophos</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="bt_in_huella">ingresar con huella</string>
    <string name="bt_in">Ingresar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="imagen_corporativa">imagen corporativa</string>
    <string name="text_opciones">Estas son las opciones que tenemos para ti</string>
    <string name="name_description">Nombre del Usuario</string>
    <string name="user_name">Nombre</string>
    <string name="desc_menu_button">menu</string>
    <string name="send_doc">Enviar documentos</string>
    <string name="in">Ingresar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>