<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.views.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_sophos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="210sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/montserrat"
            android:paddingBottom="10sp"
            android:text="@string/ingreso"
            android:textAlignment="center"
            android:textColor="@color/textColor1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearUsernameorema"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="15sp"
            android:background="@drawable/edittexz_border_style"
            android:orientation="horizontal"
            android:padding="0sp">

            <FrameLayout
                android:id="@+id/frameIcaccountcirc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageIcaccountcirc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/ic_account_circle_1" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:autofillHints="@string/prompt_email"
                    android:background="@android:color/transparent"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearUserpass"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="0sp"
            android:background="@drawable/edittexz_border_style"
            android:orientation="horizontal"
            android:padding="0sp">

            <FrameLayout
                android:id="@+id/frameIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgKey"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/key_icon" />
            </FrameLayout>

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_weight="0.7"
                android:autofillHints="@string/prompt_password"
                android:background="@android:color/transparent"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/imageMask"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="5sp"
                android:src="@drawable/mask"
                tools:ignore="ContentDescription,RtlSymmetry" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/edittexz_border_style"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/bt_in"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bt_in_fp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:background="@drawable/edittexz_border_style"
            android:padding="12sp"
            android:text="@string/bt_in_huella"
            android:textAllCaps="false"
            android:textColor="@color/textColor1"
            app:backgroundTint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>